--- a/less/style.less
+++ b/less/style.less
@@ -2,8 +2,10 @@
 
 @import "variables.less";
 
-@import "./index/header.less";
+@import "header.less";
 
 @import "./index/page.less";
 
 @import "./index/intro.less";
+
+@import "./index/offer.less";
