--- a/less/index/offer.less
+++ b/less/index/offer.less
@@ -1,5 +1,5 @@
 .offer{
-  background-image: url(../../img/grey-background-mobile.svg);
+  background-image: url(../img/grey-background-mobile.svg);
   background-position: bottom;
   background-position-y: 165px;
   background-repeat: no-repeat;
@@ -11,13 +11,13 @@
   }
 
   @media(min-width: @tablet-width){
-    background-image: url(../../img/grey-background-tablet.svg);
+    background-image: url(../img/grey-background-tablet.svg);
     background-position-y: 230px;
     overflow: visible;
   }
 
   @media(min-width: @desktop-width){
-    background-image: url(../../img/grey-background-desktop.svg);
+    background-image: url(../img/grey-background-desktop.svg);
     background-position-y: 390px;
   }
 
