--- a/css/style.css
+++ b/css/style.css
@@ -567,18 +567,33 @@ img {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 330px;
   align-items: end;
+  grid-template-areas: ". info";
+  background-image: url(../img/clocks.svg);
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: 238px 276px;
+  background-position-x: 20px;
 }
 @media (min-width: 1200px) {
   .effect .container {
     grid-template-columns: 370px 570px;
     grid-template-rows: 429px;
     align-items: center;
+    background-size: auto;
+    background-position-x: 130px;
+  }
+}
+@media (min-width: 1200px) {
+  .effect__clock {
+    width: 298px;
+    height: 345px;
   }
 }
 .effect__info {
   display: flex;
   flex-direction: column;
   margin-right: 10px;
+  grid-area: info;
 }
 @media (min-width: 1200px) {
   .effect__info {
@@ -633,6 +648,237 @@ img {
   .effect__link {
     margin-bottom: 0;
   }
+}
+.review {
+  margin-top: 40px;
+}
+@media (min-width: 660px) {
+  .review {
+    margin-top: 100px;
+  }
+}
+@media (min-width: 1200px) {
+  .review {
+    margin-top: 72px;
+  }
+}
+.review .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+@media (min-width: 1200px) {
+  .review .container {
+    flex-direction: row;
+  }
+}
+.review__button {
+  display: none;
+  width: 22px;
+  height: 41px;
+  background-color: transparent;
+  border: 0px;
+  padding: 0;
+  cursor: pointer;
+}
+@media (min-width: 1200px) {
+  .review__button {
+    display: block;
+  }
+}
+.review__button svg {
+  fill: #283645;
+  opacity: 0.3;
+}
+.review__item {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 660px) {
+  .review__item {
+    flex-direction: column-reverse;
+  }
+}
+@media (min-width: 1200px) {
+  .review__item {
+    padding-top: 100px;
+    max-width: 688px;
+    margin: 0 100px;
+    margin-bottom: 35px;
+    background-image: url("data:image/svg+xml,%3Csvg width='79' height='63' viewBox='0 0 79 63' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M35.1468 6.97257L30.8388 0C28.3886 1.48142 0 12.0588 0 39.1293C0 46.2698 0.341426 63 18.9793 63C30.2162 63 32.9778 52.8473 32.9778 49.5783C32.9778 27.8508 11.5081 35.5838 11.5081 35.5838C11.5081 17.7771 31.3911 9.06631 35.1468 6.97257Z' fill='%23EFEFEF'/%3E%3Cpath d='M79 6.97257L74.7322 0C72.302 1.48142 43.8833 12.0588 43.8833 39.1293C43.8833 46.2698 44.2247 63 62.8726 63C74.0995 63 76.8611 52.8473 76.8611 49.5783C76.8611 27.8508 55.3914 35.5838 55.3914 35.5838C55.3914 17.7771 75.3146 9.06631 79 6.97257Z' fill='%23EFEFEF'/%3E%3C/svg%3E%0A");
+    background-position: top center;
+    background-repeat: no-repeat;
+  }
+}
+@media (min-width: 660px) {
+  .review__author {
+    margin-bottom: 40px;
+  }
+}
+@media (min-width: 1200px) {
+  .review__author {
+    margin: 0;
+  }
+}
+.review__title {
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0;
+  margin-bottom: 25px;
+}
+@media (min-width: 660px) {
+  .review__title {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+}
+@media (min-width: 1200px) {
+  .review__title {
+    font-size: 24px;
+  }
+}
+.review__age {
+  font-size: 14px;
+  line-height: 30px;
+  display: none;
+}
+@media (min-width: 660px) {
+  .review__age {
+    display: inline;
+  }
+}
+@media (min-width: 1200px) {
+  .review__age {
+    font-size: 18px;
+  }
+}
+.review__text {
+  font-size: 14px;
+  line-height: 30px;
+  margin: 0;
+  margin-bottom: 25px;
+}
+@media (min-width: 660px) {
+  .review__text {
+    font-size: 18px;
+    margin-bottom: 45px;
+  }
+}
+@media (min-width: 1200px) {
+  .review__text {
+    margin-bottom: 45px;
+  }
+}
+.review__slider-list {
+  margin: 15px 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+}
+@media (min-width: 1200px) {
+  .review__slider-list {
+    display: none;
+  }
+}
+.review__dots {
+  background-color: #283645;
+  opacity: 0.6;
+  margin: 0 9px;
+  padding: 0;
+  width: 6px;
+  height: 6px;
+  border: 0;
+  border-radius: 50%;
+  display: flex;
+}
+.review__dots--active {
+  opacity: 1;
+  background-color: transparent;
+  outline: 3px solid #283645;
+}
+.sub {
+  padding: 0 20px;
+  padding-top: 100px;
+  padding-bottom: 70px;
+  margin: 0 auto;
+  background-image: url(../img/bg-gray-sub.svg);
+  background-position: bottom center;
+  background-position-y: -15px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+@media (min-width: 1200px) {
+  .sub {
+    background-position-y: -30px;
+    background-position-x: 0px;
+  }
+}
+.sub table {
+  border-spacing: 0px;
+  table-layout: fixed;
+  width: 616px;
+  margin: 0 auto;
+}
+.sub__cell {
+  padding: 0;
+  width: 152px;
+  height: 45px;
+  outline: 2px solid #e5e5e5;
+  background-color: #ffffff;
+}
+.sub__cell--price {
+  width: 152px;
+  height: 75px;
+  background-color: #283645;
+  color: #ffffff;
+  padding: 0;
+  outline: 2px solid #e5e5e5;
+  position: relative;
+  text-transform: uppercase;
+}
+.sub__cell--price:nth-child(3) {
+  background-image: url(../img/bg-hit-tablet.svg);
+  background-repeat: no-repeat;
+  background-size: 50px 50px;
+}
+.sub__cell--price:nth-child(3)::before {
+  content: "ХИТ";
+  position: absolute;
+  top: -3px;
+  left: -2px;
+  width: 50px;
+  height: 50px;
+  transform: rotate(-45deg);
+  font-size: 14px;
+  line-height: 30px;
+  font-weight: 400;
+}
+.sub__cell--name {
+  font-weight: 400;
+  text-align: left;
+  padding-left: 15px;
+}
+.sub__name {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  margin: 0;
+  display: block;
+}
+.sub__price {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 30px;
+  display: block;
+}
+.icon-yes {
+  fill: #3DC644;
+}
+.icon-no {
+  fill: #F25B26;
 }
 
 /*# sourceMappingURL=style.css.map */
