added sections + fixes

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,16 @@ img {
 }
 .button--download {
   width: 280px;
+  transition-duration: 0.2s;
+}
+.button--download:hover,
+.button--download:focus {
+  background-color: #ffffff;
+  color: #D22856;
+}
+.button--download:active {
+  background-color: #ffffff;
+  color: #D2285660;
 }
 @media (min-width: 660px) {
   .button--download {
@@ -108,6 +118,16 @@ img {
     padding-bottom: 15px;
   }
 }
+@media (min-width: 660px) {
+  .header__logo-wrapper {
+    content: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='146.3px' height='40.375px' viewBox='0 0 146.3 40.375' enable-background='new 0 0 146.3 40.375' xml:space='preserve'%3E%3Cg%3E%3Cpath fill='%23FFFFFF' d='M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z'/%3E%3Cpath fill='%23FFFFFF' d='M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z'/%3E%3Cpath fill='%23FFFFFF' d='M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.224,0.58,1.224,1.256v20.349c0,0.676-0.481,1.19-1.158,1.19h-0.129c-0.548,0-0.935-0.321-1.319-0.772l-13.975-17.868v17.45c0,0.676-0.547,1.256-1.256,1.256c-0.676,0-1.223-0.58-1.223-1.256V18.532 H102.744z'/%3E%3Cpath fill='%23FFFFFF' d='M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.168 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.935c0,0.676-0.578,1.288-1.286,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.402-10.463l-4.863,4.861 v4.894c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z'/%3E%3C/g%3E%3Cpath fill='%23FFFFFF' d='M60.498,28.266'/%3E%3Cpath fill='%23FFFFFF' d='M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.742-5.927-5.802-10.531-11.927-10.531s-11.186,4.604-11.927,10.531h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.741,5.926,5.802,10.53,11.927,10.53s11.185-4.604,11.927-10.53h1.814 c0.742,5.926,5.802,10.53,11.927,10.53s11.186-4.604,11.927-10.53H59c0.012,0,0.023-0.004,0.036-0.004 C59.931,29.842,60.728,29.125,60.462,28.016z M26.315,29.844c-0.715,4.272-4.421,7.531-8.896,7.531c-4.475,0-8.18-3.259-8.896-7.531 c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.715-4.271,4.421-7.531,8.896-7.531c4.475,0,8.18,3.26,8.896,7.531 c0.082,0.489,0.135,0.988,0.135,1.5S26.397,29.355,26.315,29.844z M51.99,29.844c-0.716,4.272-4.421,7.531-8.896,7.531 c-4.475,0-8.181-3.259-8.896-7.531c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.716-4.271,4.421-7.531,8.896-7.531 c4.475,0,8.181,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5S52.072,29.355,51.99,29.844z'/%3E%3C/svg%3E%0A");
+  }
+}
+@media (min-width: 1200px) {
+  .header__logo-wrapper {
+    content: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_2' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='146.3px' height='40.375px' viewBox='0 0 146.3 40.375' enable-background='new 0 0 146.3 40.375' xml:space='preserve'%3E%3Cg%3E%3Cpath fill='%23FFFFFF' d='M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z'/%3E%3Cpath fill='%23FFFFFF' d='M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z'/%3E%3Cpath fill='%23FFFFFF' d='M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.224,0.58,1.224,1.256v20.349c0,0.676-0.481,1.19-1.158,1.19h-0.129c-0.548,0-0.935-0.321-1.319-0.772l-13.975-17.868v17.45c0,0.676-0.547,1.256-1.256,1.256c-0.676,0-1.223-0.58-1.223-1.256V18.532 H102.744z'/%3E%3Cpath fill='%23FFFFFF' d='M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.168 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.935c0,0.676-0.578,1.288-1.286,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.402-10.463l-4.863,4.861 v4.894c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z'/%3E%3C/g%3E%3Cpath fill='%23D22856' d='M98.498,9.875c-2.002,0-3.623-1.623-3.623-3.624c0,2.001-1.623,3.624-3.625,3.624 c2.002,0,3.625,1.623,3.625,3.624C94.875,11.498,96.496,9.875,98.498,9.875z'/%3E%3Cg%3E%3Cpath fill='%23FFFFFF' d='M43.094,19.313c0.246,0,0.489,0.014,0.73,0.033c-0.437-0.728-1.227-1.221-2.136-1.221 c-0.877,0-1.614-0.568-1.884-1.354c-0.727,0.208-1.425,0.482-2.089,0.816c0.062,0.017,0.122,0.038,0.188,0.038c1.104,0,2,0.896,2,2 c0,0.096-0.015,0.188-0.028,0.281C40.875,19.524,41.959,19.313,43.094,19.313z'/%3E%3Cpath fill='%23FFFFFF' d='M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.445-3.557-2.453-6.628-5.305-8.522c-0.897,0.379-1.529,1.269-1.529,2.303c0,0.088-0.015,0.171-0.026,0.256 c1.991,1.358,3.415,3.489,3.829,5.964c0.082,0.489,0.135,0.988,0.135,1.5s-0.053,1.012-0.135,1.5 c-0.716,4.272-4.421,7.531-8.896,7.531c-4.475,0-8.181-3.259-8.896-7.531c-0.082-0.488-0.135-0.988-0.135-1.5 s0.053-1.011,0.135-1.5c0.147-0.878,0.427-1.711,0.808-2.483c-1.034-0.078-1.852-0.932-1.852-1.985 c0-0.189-0.077-0.357-0.192-0.489c-0.938,1.469-1.569,3.15-1.795,4.958h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.079,0.628,0.215,1.237,0.387,1.831c0.059-0.106,0.102-0.224,0.102-0.354 c0-1.104,0.896-2,2-2c0.166,0,0.324,0.025,0.478,0.063c-0.043-0.343-0.074-0.688-0.074-1.042c0-0.512,0.053-1.011,0.135-1.5 c0.715-4.271,4.421-7.531,8.896-7.531s8.18,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5s-0.053,1.012-0.135,1.5 c-0.715,4.272-4.421,7.531-8.896,7.531c-2.022,0-3.883-0.67-5.386-1.794c-0.35,0.302-0.8,0.491-1.299,0.491 c-0.413,0-0.749,0.336-0.749,0.748c0,0.29-0.065,0.564-0.176,0.812c2.075,1.708,4.722,2.743,7.614,2.743 c6.125,0,11.185-4.604,11.927-10.53h1.814c0.742,5.926,5.802,10.53,11.927,10.53s11.186-4.604,11.927-10.53H59 c0.012,0,0.023-0.004,0.036-0.004C59.931,29.842,60.728,29.125,60.462,28.016z'/%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23D22856' d='M50.686,16.125c-2.485,0-4.499-2.014-4.499-4.499c0,2.485-2.014,4.499-4.499,4.499 c2.485,0,4.499,2.014,4.499,4.499C46.187,18.139,48.2,16.125,50.686,16.125z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23D22856' d='M37.904,19.626c-1.519,0-2.749-1.23-2.749-2.749c0,1.519-1.23,2.749-2.749,2.749 c1.519,0,2.749,1.229,2.749,2.749C35.155,20.855,36.386,19.626,37.904,19.626z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23D22856' d='M10.734,34.072c-1.519,0-2.749-1.23-2.749-2.75c0,1.52-1.23,2.75-2.749,2.75 c1.519,0,2.749,1.229,2.749,2.748C7.985,35.303,9.215,34.072,10.734,34.072z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+  }
+}
 .nav {
   position: absolute;
   top: 66px;
@@ -156,6 +176,14 @@ img {
   padding: 15px 0;
   box-shadow: 0px 1px 0px #000000, inset 0px 1px 0px rgba(255, 255, 255, 0.15);
   border-bottom: 1px solid #000000;
+  position: relative;
+}
+.nav__item:hover,
+.nav__item:focus {
+  color: #D22856;
+}
+.nav__item:active {
+  color: #D2285630;
 }
 @media (min-width: 1200px) {
   .nav__item {
@@ -170,6 +198,15 @@ img {
 }
 .nav__item:last-child {
   padding-right: 0;
+}
+.nav__item--current::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  bottom: -20px;
+  left: 0;
+  background-color: #ffffff;
 }
 .nav__toggle {
   width: 50px;
@@ -772,8 +809,8 @@ img {
   }
 }
 .review__slider-list {
-  margin: 15px 0;
-  padding: 0;
+  margin: 0;
+  padding: 15px 0;
   list-style: none;
   display: flex;
 }
@@ -799,16 +836,23 @@ img {
   outline: 3px solid #283645;
 }
 .sub {
-  padding: 0 20px;
-  padding-top: 100px;
-  padding-bottom: 70px;
   margin: 0 auto;
   background-image: url(../img/bg-gray-sub.svg);
   background-position: bottom center;
-  background-position-y: -15px;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
+  overflow: visible;
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 40px;
+}
+@media (min-width: 660px) {
+  .sub {
+    padding: 0 20px;
+    padding-bottom: 70px;
+    padding-top: 100px;
+    background-position-y: -15px;
+  }
 }
 @media (min-width: 1200px) {
   .sub {
@@ -816,11 +860,38 @@ img {
     background-position-x: 0px;
   }
 }
+.sub .review__slider-list {
+  justify-content: center;
+}
+@media (min-width: 660px) {
+  .sub .review__slider-list {
+    display: none;
+  }
+}
+.sub img {
+  margin: 0 auto;
+}
+@media (min-width: 660px) {
+  .sub img {
+    display: none;
+  }
+}
 .sub table {
   border-spacing: 0px;
   table-layout: fixed;
   width: 616px;
   margin: 0 auto;
+  display: none;
+}
+@media (min-width: 660px) {
+  .sub table {
+    display: table;
+  }
+}
+@media (min-width: 1200px) {
+  .sub table {
+    width: 940px;
+  }
 }
 .sub__cell {
   padding: 0;
@@ -828,6 +899,12 @@ img {
   height: 45px;
   outline: 2px solid #e5e5e5;
   background-color: #ffffff;
+}
+@media (min-width: 1200px) {
+  .sub__cell {
+    width: 233px;
+    height: 59px;
+  }
 }
 .sub__cell--price {
   width: 152px;
@@ -838,6 +915,12 @@ img {
   outline: 2px solid #e5e5e5;
   position: relative;
   text-transform: uppercase;
+}
+@media (min-width: 1200px) {
+  .sub__cell--price {
+    width: 233px;
+    height: 94px;
+  }
 }
 .sub__cell--price:nth-child(3) {
   background-image: url(../img/bg-hit-tablet.svg);
@@ -879,6 +962,225 @@ img {
 }
 .icon-no {
   fill: #F25B26;
+}
+.contacts {
+  color: #283645;
+  text-align: center;
+}
+.contacts .container {
+  width: 320px;
+  height: 395px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 20px;
+  padding-top: 50px;
+}
+@media (min-width: 660px) {
+  .contacts .container {
+    width: 660px;
+    height: 405px;
+    padding-top: 55px;
+    padding-bottom: 25px;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts .container {
+    width: 1200px;
+    height: 365px;
+    padding-top: 70px;
+    padding-bottom: 0;
+    margin-bottom: 70px;
+  }
+}
+.contacts iframe {
+  height: 200px;
+  width: 100%;
+  border: none;
+  overflow: hidden;
+  position: relative;
+}
+@media (min-width: 660px) {
+  .contacts iframe {
+    height: 375px;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts iframe {
+    height: 500px;
+  }
+}
+.contacts__title {
+  margin: 0;
+  margin-bottom: 30px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+}
+@media (min-width: 660px) {
+  .contacts__title {
+    font-size: 40px;
+    line-height: 54px;
+    width: 100%;
+    margin-bottom: 40px;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts__title {
+    font-size: 50px;
+    line-height: 68px;
+    margin-bottom: 50px;
+  }
+}
+.contacts__item {
+  margin-bottom: 15px;
+}
+@media (min-width: 660px) {
+  .contacts__item {
+    width: 50%;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts__item {
+    width: 33%;
+  }
+  .contacts__item:nth-child(2) {
+    order: 1;
+  }
+  .contacts__item:nth-child(3) {
+    order: 3;
+  }
+  .contacts__item:nth-child(4) {
+    order: 2;
+  }
+}
+.contacts__subtitle {
+  margin: 0;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+}
+@media (min-width: 660px) {
+  .contacts__subtitle {
+    margin-bottom: 5px;
+  }
+}
+.contacts__text {
+  margin: 0;
+  display: inline;
+  color: #D22856;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 33px;
+}
+.contacts__text:hover,
+.contacts__text:focus {
+  text-decoration: underline;
+  color: #000000;
+}
+.contacts__text:active {
+  color: #00000030;
+}
+.footer {
+  color: #283645;
+}
+.footer .container {
+  padding: 40px 74px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+@media (min-width: 660px) {
+  .footer .container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 35px 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer .container {
+    padding: 75px 130px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__logo {
+    content: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_2' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='146.3px' height='40.375px' viewBox='0 0 146.3 40.375' enable-background='new 0 0 146.3 40.375' xml:space='preserve'%3E%3Cg%3E%3Cpath fill='%23283645' d='M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.063 c0,4.86-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.287-1.289,1.287c-0.676,0-1.256-0.58-1.256-1.287L71.874,18.661 L71.874,18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.062c0-3.221-2.414-4.894-6.053-4.894h-5.699v9.917h5.57V29.641 z'/%3E%3Cpath fill='%23283645' d='M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z'/%3E%3Cpath fill='%23283645' d='M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.225,0.58,1.225,1.256v20.349c0,0.677-0.48,1.19-1.158,1.19h-0.129 c-0.548,0-0.936-0.321-1.318-0.772l-13.976-17.867v17.449c0,0.677-0.547,1.257-1.257,1.257c-0.676,0-1.223-0.58-1.223-1.257V18.532 H102.744z'/%3E%3Cpath fill='%23283645' d='M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.168 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.936c0,0.676-0.577,1.288-1.285,1.288c-0.482,0-0.807-0.259-1.03-0.58l-8.401-10.464l-4.863,4.861 v4.895c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z'/%3E%3C/g%3E%3Cpath fill='%23D22856' d='M98.498,9.875c-2.002,0-3.623-1.623-3.623-3.624c0,2.001-1.623,3.624-3.625,3.624 c2.002,0,3.625,1.623,3.625,3.624C94.875,11.498,96.496,9.875,98.498,9.875z'/%3E%3Cg%3E%3Cpath fill='%23D22856' d='M43.094,19.313c0.246,0,0.489,0.014,0.73,0.033c-0.437-0.728-1.227-1.221-2.136-1.221 c-0.877,0-1.614-0.568-1.884-1.354c-0.727,0.208-1.425,0.482-2.089,0.816c0.062,0.017,0.122,0.038,0.188,0.038c1.104,0,2,0.896,2,2 c0,0.096-0.015,0.188-0.028,0.281C40.875,19.524,41.959,19.313,43.094,19.313z'/%3E%3Cpath fill='%23D22856' d='M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.445-3.557-2.453-6.628-5.305-8.522c-0.897,0.379-1.529,1.269-1.529,2.303c0,0.088-0.015,0.171-0.026,0.256 c1.991,1.358,3.415,3.489,3.829,5.965c0.082,0.488,0.135,0.987,0.135,1.5c0,0.512-0.053,1.012-0.135,1.5 c-0.716,4.271-4.421,7.53-8.896,7.53c-4.475,0-8.181-3.259-8.896-7.53c-0.082-0.488-0.135-0.988-0.135-1.5 c0-0.513,0.053-1.012,0.135-1.5c0.147-0.879,0.427-1.712,0.808-2.484c-1.034-0.077-1.852-0.932-1.852-1.984 c0-0.189-0.077-0.357-0.192-0.488c-0.938,1.469-1.569,3.149-1.795,4.957h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.079,0.629,0.215,1.237,0.387,1.831c0.059-0.106,0.102-0.224,0.102-0.354 c0-1.104,0.896-2,2-2c0.166,0,0.324,0.024,0.478,0.062c-0.043-0.343-0.074-0.688-0.074-1.042c0-0.512,0.053-1.011,0.135-1.5 c0.715-4.271,4.421-7.531,8.896-7.531s8.18,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5s-0.053,1.012-0.135,1.5 c-0.715,4.272-4.421,7.531-8.896,7.531c-2.022,0-3.883-0.67-5.386-1.794c-0.35,0.302-0.8,0.491-1.299,0.491 c-0.413,0-0.749,0.336-0.749,0.748c0,0.289-0.065,0.563-0.176,0.812c2.075,1.708,4.722,2.743,7.614,2.743 c6.125,0,11.185-4.604,11.927-10.529h1.814c0.742,5.926,5.802,10.529,11.927,10.529s11.186-4.604,11.927-10.529H59 c0.012,0,0.023-0.005,0.036-0.005C59.931,29.842,60.728,29.125,60.462,28.016z'/%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23283645' d='M50.686,16.125c-2.485,0-4.499-2.014-4.499-4.499c0,2.485-2.014,4.499-4.499,4.499 c2.485,0,4.499,2.014,4.499,4.499C46.187,18.139,48.2,16.125,50.686,16.125z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23283645' d='M37.904,19.626c-1.519,0-2.749-1.23-2.749-2.749c0,1.519-1.23,2.749-2.749,2.749 c1.519,0,2.749,1.229,2.749,2.749C35.155,20.855,36.386,19.626,37.904,19.626z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23283645' d='M10.734,34.072c-1.519,0-2.749-1.23-2.749-2.75c0,1.52-1.23,2.75-2.749,2.75 c1.519,0,2.749,1.229,2.749,2.748C7.985,35.303,9.215,34.072,10.734,34.072z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+  }
+}
+.footer__social {
+  padding: 35px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media (min-width: 660px) {
+  .footer__social {
+    padding: 0;
+  }
+}
+.footer__copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social__link {
+  border-radius: 50%;
+  min-width: 48px;
+  min-height: 48px;
+  border: 3px solid #28364510;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #D22856;
+}
+.social__link:hover,
+.social__link:focus {
+  border: 3px solid #283645;
+}
+.social__link:active {
+  opacity: 0.3;
+}
+@media (min-width: 660px) {
+  .social__link {
+    margin: 0 7px;
+  }
+}
+@media (min-width: 1200px) {
+  .social__link {
+    margin: 0 3px;
+  }
+}
+.copyright__text {
+  font-size: 14px;
+  line-height: 18px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.copyright__text:hover .copyright__logo,
+.copyright__text:focus .copyright__logo {
+  fill: #000000;
+}
+.copyright__text:active .copyright__logo {
+  fill: #00000030;
+}
+.copyright__text span {
+  margin-bottom: 3px;
+  display: block;
+  padding-right: 15px;
+}
+@media (min-width: 1200px) {
+  .copyright__text {
+    font-size: 18px;
+    line-height: 18px;
+  }
+}
+.copyright__logo {
+  fill: #D22856;
 }
 
 /*# sourceMappingURL=style.css.map */
