--- a/less/index/review.less
+++ b/less/index/review.less
@@ -133,8 +133,9 @@
   }
 
   &__slider-list{
-    margin: 15px 0;
-    padding: 0;
+    margin: 0;
+    padding: 15px 0;
+    // padding: 0;
     list-style: none;
     display: flex;
 
