--- a/less/index/sub.less
+++ b/less/index/sub.less
@@ -2,24 +2,50 @@
   // display: flex;
   // flex-direction: column;
 
-  padding: 0 20px;
-  padding-top: 100px;
-  padding-bottom: 70px;
   margin: 0 auto;
   // margin-bottom: 70px;
 
   background-image: url(../img/bg-gray-sub.svg);
 
   background-position: bottom center;
-  background-position-y: -15px;
+  // background-position-y: -15px;
   background-repeat: no-repeat;
   background-size: cover;
 
-  overflow: hidden;
+  overflow: visible;
+  position: relative;
+
+  padding-top: 100px;
+  padding-bottom: 40px;
+
+  @media(min-width:@tablet-width){
+
+    padding: 0 20px;
+    padding-bottom: 70px;
+    padding-top: 100px;
+
+    background-position-y: -15px;
+  }
 
   @media(min-width:@desktop-width){
     background-position-y: -30px;
     background-position-x: 0px;
+  }
+
+  & .review__slider-list{
+    justify-content: center;
+
+    @media(min-width:@tablet-width){
+      display: none;
+    }
+  }
+
+  & img{
+    margin: 0 auto;
+
+    @media(min-width:@tablet-width){
+      display: none;
+    }
   }
 
   & table{
@@ -27,6 +53,16 @@
     table-layout: fixed;
     width: 616px;
     margin: 0 auto;
+
+    display: none;
+
+    @media(min-width:@tablet-width){
+      display: table;
+    }
+
+    @media(min-width:@desktop-width){
+      width: 940px;
+    }
   }
 
   &__cell{
@@ -35,6 +71,11 @@
     height: 45px;
     outline: 2px solid #e5e5e5;
     background-color: #ffffff;
+
+    @media(min-width:@desktop-width){
+      width: 233px;
+      height: 59px;
+    }
 
     &--price{
       // display: flex;
@@ -48,6 +89,11 @@
       outline: 2px solid #e5e5e5;
       position: relative;
       text-transform: uppercase;
+
+      @media(min-width:@desktop-width){
+        width: 233px;
+        height: 94px;
+      }
 
       &:nth-child(3){
         background-image: url(../img/bg-hit-tablet.svg);
